#APPBUG-2492 fixing ipad text cut off on sortSelectButton
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@28848 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/browse/browse.css
+++ b/projects/Media/docroot/assets/css/browse/browse.css
@@ -553,7 +553,11 @@ ul.products .description-skin{
 /* LARGE VISUAL END                 */
 /* -------------------------------- */
 
-.browse .main .sortSelectButton .title,
-.popupcontentghost .sortSelectButton .title{
+.cssbutton.sortSelectButton{
+  padding-top:6px;
+}
+
+.sortSelectButton,
+.sortSelectButton .title{
   line-height:18px;
 }
